--- a/styles.css
+++ b/styles.css
@@ -80,16 +80,19 @@ html,body
     display: flex;
     justify-content: center;
     align-items: center;
-    /* position: relative; */
+    position: relative;
+    text-align: center;
     /* margin: 3%; */
 }
 
 .milkround-text-container {
-    position: fixed;
+    /* position: relative; */
+    margin: auto 0;
     left: 100px;
     color: rgb(37, 37, 37);
     font-weight: 600;
     font-size: 1.5em;
+    z-index: 3;
 }
 /* end milkround styling */
 
@@ -115,7 +118,6 @@ html,body
     color: white;
     font-size: 1.5em;
 }
-
 
 
 
