checking push to main

--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,6 @@ html,body
     font-size: 1.5em;
 }
 
-/* CHECKING GIT SOURCE CONTROL  */
+/* CHECKING GIT SOURCE CONTROL [PUSH TO SERVER] */
 
 /* PROGRESS UPON REOPEN: currently stuck at making the join our milkround stay where it is over the image */
