--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html,body
     margin-top: 100px;
 }
 
-/* Header styling */
+/* Header  */
 
 .container {
     display: flex;
@@ -34,7 +34,7 @@ html,body
     padding: 20px 0px;
 }
 
-/* Navigation links in header bar styling */
+/* Navlinks in header */
 .navlinks {
     color: rgb(46, 46, 46);
     text-decoration: none;
@@ -44,6 +44,8 @@ html,body
 .navlinks:hover {
     color: #b7dde2;
 }
+
+/* Size when ipad width screen */
 
 @media (max-width:810px){
     .navlinks{
@@ -57,7 +59,7 @@ html,body
         width: 160px;
     }
 }
-/* Above changes sizing when dropping to ipad width screen */
+
 @media (max-width:710px){
     .navlinks{
         font-size: 80%;
@@ -78,10 +80,9 @@ html,body
     width: 100px;
     gap: 10%;
 }
-/* End of Header styling */
 
 
-/* Styling for milkround banner*/
+/* Milkround banner*/
 .milkround-banner-section {
     height: 500px;
     padding: 0;
@@ -97,10 +98,6 @@ html,body
     font-size: 30px;
     padding-top: 150px;
 }
-/* end milkround styling */
-
-
-
 
 /* styling for thin banner sections */
 .bottles-usage {
@@ -123,4 +120,21 @@ html,body
     background-color: #3d5367;
     color: white;
     font-size: 1.5em;
+    margin-bottom: 0px;
+}
+
+/* Why us section */
+.why-us {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.info-blocks{
+    display: flex;
+    justify-content: center;
+    max-width: 1500px;
+    margin: auto;
 }
