--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,23 @@ html,body
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 25px;
+    padding: 20px;
     position: fixed;
+    /* max-height: 100px; */
     top: 0;
     width: 100%;
     background-color: white;
     z-index: 3;
+}
+.sitelogo {
+    padding-bottom: 9px;
+}
+.sr-only {
+    display: none;
+}
+
+.mobile-nav-toggle {
+    display: none;
 }
 
 .navlinkscontainer {
@@ -32,6 +43,7 @@ html,body
     justify-content: space-around;
     flex-basis: 700px;
     padding: 20px 0px;
+    margin-top: 1%;
 }
 
 /* Navlinks in header */
@@ -39,43 +51,21 @@ html,body
     color: rgb(46, 46, 46);
     text-decoration: none;
     font-weight: 600;
+    margin-top: 30px;
 }
+
 
 .navlinks:hover {
     color: #b7dde2;
-}
-
-/* Size when ipad width screen */
-
-@media (max-width:810px){
-    .navlinks{
-        font-size: 80%;
-        justify-content: center;
-    }
-    .container{
-        padding: 5px;
-    }
-    .sitelogo {
-        width: 160px;
-    }
-}
-
-@media (max-width:710px){
-    .navlinks{
-        font-size: 80%;
-        justify-content: center;
-    }
-    .container{
-        padding: 5px;
-    }
-    .sitelogo {
-        width: 160px;
-    }
+    
 }
 
 .signin {
     display: flex;
     justify-content: center;
+    margin-top: 5px;
+    margin-right: 3%;
+    padding-top: 3px;
     align-items: center;
     width: 100px;
     gap: 10%;
@@ -88,6 +78,7 @@ html,body
     padding: 0;
     background-image: url("https://themodernmilkman.co.uk/img/images/new-home-ban-test.jpg");
     background-size: cover;
+    background-position: 51% 0%;
     text-align: center;
     width: 100vw;
 }
@@ -98,6 +89,7 @@ html,body
     font-size: 30px;
     padding-top: 150px;
 }
+
 
 /* styling for thin banner sections */
 .bottles-usage {
@@ -138,3 +130,142 @@ html,body
     max-width: 1500px;
     margin: auto;
 }
+
+
+/* Media queries */
+
+@media (max-width:860px){
+    .navlinks{
+        font-size: 80%;
+        justify-content: center;
+        color: white;
+    }
+    .container{
+        padding: 15px 10px;
+    }
+    .sitelogo {
+        width: 160px;
+    }
+
+}
+
+@media only screen and (max-width:860px){
+    
+    .navlinkscontainer {
+        /* display: none; */
+        margin: 0px 0px;
+        position: fixed;
+        z-index: 1000;
+        inset: 0 0 0 50%;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 70px 20px;
+        /* background: hsl(0 0% 0% / 0.75); */
+        background: white;
+        transform: translateX(100%);
+        transition: transform 350ms ease-in;
+    }
+
+    .mobile-nav-toggle {
+        display: block;
+        position: absolute;
+        z-index: 9999;
+        background: url("images/homepage/bars-solid.svg");
+        background-repeat: no-repeat;
+        border: 0;
+        width: 1.5rem;
+        aspect-ratio: 1;
+        top: 2rem;
+        right: 4rem;
+    }
+
+    .mobile-nav-toggle[aria-expanded="true"]{
+        background: url("images/homepage/xmark-solid.svg");
+        background-repeat: no-repeat;
+    }
+
+    .navlinkscontainer[data-visible="true"]{
+        transform: translateX(0%);
+    }
+
+    .signin {
+        padding-top: 0px;
+        padding-bottom: 10px;
+    }
+
+    /* below ensures browser uses blur background if possible, otherwise default to grey */
+    @supports (backdrop-filter: blur(1rem)){
+        /* .navlinkscontainer{
+            background: hsl(0 0% 100% / 0.1);
+            backdrop-filter: blur(1rem);
+        } */
+        .navlinks {
+            color: black;
+        }
+
+    }
+    .navlinks{
+        font-size: 80%;
+        justify-content: center;
+        /* border-bottom: dotted 1px rgb(22, 22, 22); */
+        background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23333' stroke-width='7' stroke-dasharray='6%2c 14' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+    }
+    .container{
+        padding: 20px 15px;
+    }
+    .sitelogo {
+        width: 160px;
+    }
+    .milkround-banner-section {
+        padding: 0;
+        background-image: url("https://themodernmilkman.co.uk/img/images/new-home-ban-test.jpg");
+        background-size: auto;
+        background-position: 51% 10%;
+        text-align: center;
+        width: 100vw;
+    }
+    .bottles-usage{
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        gap: 0px;
+        padding-top: 30px;
+        background-color: #adced8;
+        color: #365369;
+        font-size: 1.2em;
+    }
+    .bin-usage {
+        flex-direction: column;
+        text-align: center;
+        height: 280px;
+        gap: 0px;
+        padding-top: 30px;
+        font-size: 1.2em;
+    }
+    .info-blocks {
+        flex-direction: column;
+        text-align: center;
+        max-width: 450px;
+        gap: 0px;
+        padding-top: 30px;
+    }
+}
+
+@media (max-width: 450px) {
+
+    .milkround-text-container{
+        margin-top: -30px;
+    }
+
+    .container {
+        justify-content: center;
+        gap: 0px;
+    }
+
+    .mobile-nav-toggle {
+        width: 1rem;
+        right: 3rem;
+    }
+}
+
